ajuste de ejemplo para cambiar la base de datos

--- a/2024/s02/g2/backend/build.gradle
+++ b/2024/s02/g2/backend/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 // NOTE: The following dependencies were automatically added by the [Gradle Plus] extension.
 // Please review them to ensure they match your project's requirements.
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+
+// NOTE: The following dependencies were automatically added by the [Gradle Plus] extension.
+// Please review them to ensure they match your project's requirements.
+	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
