--- a/2024/s02/g2/backend/src/main/resources/application.properties
+++ b/2024/s02/g2/backend/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 spring.application.name=crudgrupo2
 #URL de conexión a la base de datos
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:mysql://localhost:3306/carrodb
+spring.datasource.url=jdbc:mysql://mysql-2dba06c2-unicesar-bae3.e.aivencloud.com:20603/defaultdb?ssl-mode=REQUIRED
 #Tipo de controlador de la BD
 #spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #Muestra en consola las consultas sql generadas
 spring.jpa.show-sql=true
 #Habilita la consola de la Base de Datos H2 (Integrada en Spring)
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 #Usuario y contraseña de la consola de H2
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_Pmdq6GVacWKxn6_lzdF
 #Ruta base de Spring Data Rest
 spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=create
