--- a/2024/s02/g3/backend/carrental/src/main/resources/application.properties
+++ b/2024/s02/g3/backend/carrental/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=carrental
+server.port=8081
+#URL de conexión a la base de datos
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/rentacarv2
+#Tipo de controlador de la BD
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#Muestra en consola las consultas sql generadas
+spring.jpa.show-sql=true
+#Habilita la consola de la Base de Datos H2 (Integrada en Spring)
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#Usuario y contraseña de la consola de H2
+spring.datasource.username=root
+spring.datasource.password=admin
+#Ruta base de Spring Data Rest
+spring.data.rest.base-path=/api
+#spring.jpa.hibernate.ddl-auto=create
