--- a/2024/s02/g3/backend/carrental/src/main/resources/application.properties
+++ b/2024/s02/g3/backend/carrental/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=carrental
-server.port=8081
+server.port=8085
 #URL de conexión a la base de datos
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.url=jdbc:mysql://localhost:3306/rentacarv2
@@ -16,5 +16,5 @@ spring.jpa.show-sql=true
 spring.datasource.username=root
 spring.datasource.password=admin
 #Ruta base de Spring Data Rest
-spring.data.rest.base-path=/api
 #spring.jpa.hibernate.ddl-auto=create
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
